deployments/Kustomize/etcd-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-api
  namespace: default
  labels:
    app: etcd-api
spec:
  type: ClusterIP
  selector:
    app: etcd-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
