deployments/Kustomize/etcd-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: etcd-api
  namespace: default
  labels:
    app: etcd-api
spec:
  rules:
  - host: etcd-api.sample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: etcd-api
          servicePort: 80
